Refactor project structure, update dependencies, and improve code quality
Co-authored-by: otaboyev.azamat <otaboyev.azamat@inbox.ru>